--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css"> 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/estilos.css">
     <title>Glanz | Automotores</title>
     <link rel="shortcut icon" href="./img/logo-g-blanco.jpeg" type="image/x-icon">
@@ -14,21 +12,19 @@
     <meta name="description" content="Concesionaria de autos. Comprá tu auto 0Km fácil y rápido. Tienda oficial de Fiat. Elegí tu auto y compra ahora. Comunicate con nosotros y te asesoramos.">
     <meta property="og:type" content="Informativa">
     <meta property="og:title" content="Glanz | Automotores">
-    <meta property="og:url" content="">
-    <meta property="og:image" content="">
+    <meta property="og:url" content="https://grupoglanz.netlify.app">
+    <meta property="og:image" content="https://grupoglanz.netlify.app/img/logo-grupo-glanz.jpeg">
     <meta property="og:description" content="Concesionaria de autos. Comprá tu auto 0Km fácil y rápido.">
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg fixed-top">
             <div class="container-fluid navCel">
-                <a class="navbar-brand" href="./index.html"><img src="./img/logo-grupo-glanz.jpeg" alt="logo"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
-                    data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+                <a class="navbar-brand" href="./index.html"><img src="./img/logo-grupo-glanz.jpeg" alt="logo de glanz"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
-                    aria-labelledby="offcanvasNavbarLabel">
+                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
                     <div class="offcanvas-header">
                         <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Grupo Glanz</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -71,7 +67,7 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active ">
                         <div class="tarjeta">
-                            <img src="./img/fiat-cronos-precision1.3cvt-montecarlo.png" alt="cronos-precision">
+                            <img src="./img/fiat-cronos-precision1.3cvt-montecarlo.png" alt="cronos precision">
                             <h3>Cronos precision</h3>
                             <p>Tapizado interior de cuero | Llantas 16" | Caja autoátiva CVT</p>
                             <a class="vermas" href="">VER MÁS</a>
@@ -79,7 +75,7 @@
                     </div>
                     <div class="carousel-item ">
                         <div class="tarjeta">
-                            <img src="./img/fiat-pulse-impetus-azulbicolor.webp" alt="pulse-impetus">
+                            <img src="./img/fiat-pulse-impetus-azulbicolor.webp" alt="pulse impetus">
                             <h3>Pulse impetus</h3>
                             <p>Llantas de aleación de 17" carrocería bitono | Tablero full digital de 7" | Asientos tapizados en cuero</p>
                             <a class="vermas" href="">VER MÁS</a>
@@ -87,20 +83,18 @@
                     </div>
                     <div class="carousel-item ">
                         <div class="tarjeta">
-                            <img src="./img/fiat-toro-blanco.webp" alt="toro-volcano">
+                            <img src="./img/fiat-toro-blanco.webp" alt="toro volcano">
                             <h3>Toro volcano</h3>
                             <p>ADAS | Apertura y encendido remoto | Llantas de aleación 18"</p>
                             <a class="vermas" href="">VER MÁS</a>
                         </div>
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
-                    data-bs-slide="prev">
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
-                    data-bs-slide="next">
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
@@ -110,19 +104,19 @@
             <h2>Cómo comprar</h2>
             <div class="pasos">
                 <div>
-                    <img src="./img/coche-blanco.png" alt="ilustracion-de-auto">
+                    <img src="./img/coche-blanco.png" alt="ilustracion de auto">
                     <h3>Elegí tu auto</h3>
                 </div>
                 <div>
-                    <img src="./img/chat-blanco.png" alt="ilustracion-de-chat">
+                    <img src="./img/chat-blanco.png" alt="ilustracion de chat">
                     <h3>Contactate con nosotros</h3>
                 </div>
                 <div>
-                    <img src="./img/ahorro-blanco.png" alt="ilustracion-de-ahorro">
+                    <img src="./img/ahorro-blanco.png" alt="ilustracion de ahorro">
                     <h3>Elegí tu método de financiamiento</h3>
                 </div>
                 <div>
-                    <img src="./img/listo-blanco.png" alt="ilustracion-de-triunfo">
+                    <img src="./img/listo-blanco.png" alt="ilustracion de triunfo">
                     <h3>¡Y listo!</h3> <!-- qué hacer -->
                 </div>
             </div>
@@ -131,59 +125,61 @@
             <h2>Testimonios de nuestros clientes</h2>
             <div class="resenas">
                 <div>
-                    <h3>Nombre Apellido</h3>
-                    <h5>Compró un cronos</h5>
-                    <img src="./img/estrella-si.png" alt="estrella">
-                    <img src="./img/estrella-si.png" alt="estrella">
-                    <img src="./img/estrella-si.png" alt="estrella">
-                    <img src="./img/estrella-si.png" alt="estrella">
-                    <img src="./img/estrella-no.png" alt="estrella">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore culpa tenetur nulla eius eveniet
-                        ex id ad, vero distinctio quae eligendi optio eaque ratione ducimus atque officiis corrupti enim
-                        fugit?</p> <!--reseña -->
+                    <h3>Alberto Almada</h3>
+                    <h5>Compró un Strada Volcano</h5>
+                    <img src="./img/estrella-si.png" alt="estrella llena">
+                    <img src="./img/estrella-si.png" alt="estrella llena">
+                    <img src="./img/estrella-si.png" alt="estrella llena">
+                    <img src="./img/estrella-si.png" alt="estrella llena">
+                    <img src="./img/estrella-no.png" alt="estrella vacía">
+                    <p>Salió todo impecable, cumplieron 100% en todo lo pactado. Súper rápido todo y la gente siempre muy atenta.</p> 
                 </div>
                 <div>
-                    <h3>Nombre Apellido</h3>
-                    <h5>Compró un cronos</h5>
-                    <img src="./img/estrella-si.png" alt="estrella">
-                    <img src="./img/estrella-si.png" alt="estrella">
-                    <img src="./img/estrella-si.png" alt="estrella">
-                    <img src="./img/estrella-si.png" alt="estrella">
-                    <img src="./img/estrella-no.png" alt="estrella">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore culpa tenetur nulla eius eveniet
-                        ex id ad, vero distinctio quae eligendi optio eaque ratione ducimus atque officiis corrupti enim
-                        fugit?</p> <!--reseña -->
+                    <h3>Carlos Palacio</h3>
+                    <h5>Compró un Cronos Precision</h5>
+                    <img src="./img/estrella-si.png" alt="estrella llena">
+                    <img src="./img/estrella-si.png" alt="estrella llena">
+                    <img src="./img/estrella-si.png" alt="estrella llena">
+                    <img src="./img/estrella-si.png" alt="estrella llena">
+                    <img src="./img/estrella-si.png" alt="estrella vacía">
+                    <p>Lo fundamental de una empresa es el capital humano, sin esto no funcionaría, así que felicito a Glanz por inculcar a su personal cordialidad y su rapidez para resolver todo. Sin ninguna duda y con los ojos cerrados los recomendaría a mis amigos y familiares.</p> 
                 </div>
                 <div>
-                    <h3>Nombre Apellido</h3>
-                    <h5>Compró un cronos</h5>
-                    <img src="./img/estrella-si.png" alt="estrella">
-                    <img src="./img/estrella-si.png" alt="estrella">
-                    <img src="./img/estrella-si.png" alt="estrella">
-                    <img src="./img/estrella-si.png" alt="estrella">
-                    <img src="./img/estrella-no.png" alt="estrella">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore culpa tenetur nulla eius eveniet
-                        ex id ad, vero distinctio quae eligendi optio eaque ratione ducimus atque officiis corrupti enim
-                        fugit?</p> <!--reseña -->
+                    <h3>Carolina Barreiro</h3>
+                    <h5>Compró un Pulse Impetus</h5>
+                    <img src="./img/estrella-si.png" alt="estrella llena">
+                    <img src="./img/estrella-si.png" alt="estrella llena">
+                    <img src="./img/estrella-si.png" alt="estrella llena">
+                    <img src="./img/estrella-si.png" alt="estrella llena">
+                    <img src="./img/estrella-no.png" alt="estrella vacía">
+                    <p>La atención del personal es muy buena. Me brindaron un muy buen asesorammiento y cumplieron con todo lo acordado en tiempo y forma. Todo el proceso fue muy transparente y brindan un buen servicio de post-venta.</p> 
                 </div>
             </div>
         </section>
         <div class="wspp">
-            <a href="https://wa.link/bwnh38" target="_blank"><img src="./img/whatsappgreen.png" alt="whatsapp"></a>
+            <a href="https://wa.link/bwnh38" target="_blank"><img src="./img/whatsappgreen.png" alt="vínculo al chat de whatsapp"></a>
         </div>
     </main>
     <footer>
-        <div>
-            <a href="https://www.instagram.com" target="_blank"><img src="./img/icono-instagram.png"
-                    alt="instagram"></a>
-            <a href="https://www.linkedin.com/feed/" target="_blank"><img src="./img/icono-linkedin.png"
-                    alt="linkedin"></a>
-            <a href="https://www.facebook.com" target="_blank"><img src="./img/icono-facebook.png" alt="facebook"></a>
+        <div class="redes">
+            <a href="https://www.instagram.com/grupo.glanz/?utm_source=ig_web_button_share_sheet&igshid=OGQ5ZDc2ODk2ZA==" target="_blank"><img src="./img/icono-instagram.png" alt="vínculo a página de instagram"></a>
+            <a href="https://www.linkedin.com/feed/" target="_blank"><img src="./img/icono-linkedin.png" alt="vínculo a página de linkedin"></a>
+            <a href="https://www.facebook.com" target="_blank"><img src="./img/icono-facebook.png" alt="vínculo a página de facebook"></a>
+        </div>
+        <div class="vinculos">
+            <div>
+                <a href="./pages/compra-tu-auto.html">Vehículos</a>
+                <a href="">Postventa</a>
+            </div>
+            <div>
+                <a href="https://maps.app.goo.gl/r8uFdTzfghSBodTBA" target="_blank">Concesionario</a>
+                <a href="https://wa.link/bwnh38" target="_blank">Contacto</a>
+            </div>
+            <div>
+                <a href="https://forms.gle/iPuwWWtCbQkRLYyv7" target="_blank">Trabajá con nosotros</a>
+            </div>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
-
 </html>
