--- a/pages/compra-tu-auto.html
+++ b/pages/compra-tu-auto.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
     <title>Glanz | Comprá tu auto</title>
     <link rel="shortcut icon" href="../img/logo-g-blanco.jpeg" type="image/x-icon">
@@ -13,21 +11,19 @@
     <meta name="description" content="Concesionaria de autos. Comprá tu auto 0Km fácil y rápido. Tienda oficial de Fiat. Elegí tu auto y compra ahora. Comunicate con nosotros y te asesoramos.">
     <meta property="og:type" content="Informativa">
     <meta property="og:title" content="Glanz | Comprá tu auto">
-    <meta property="og:url" content="">
-    <meta property="og:image" content="">
+    <meta property="og:url" content="https://grupoglanz.netlify.app">
+    <meta property="og:image" content="https://grupoglanz.netlify.app/img/logo-grupo-glanz.jpeg">
     <meta property="og:description" content="Concesionaria de autos. Comprá tu auto 0Km fácil y rápido.">
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg fixed-top">
             <div class="container-fluid navCel">
-                <a class="navbar-brand" href="../index.html"><img src="../img/logo-grupo-glanz.jpeg" alt="logo"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
-                    data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+                <a class="navbar-brand" href="../index.html"><img src="../img/logo-grupo-glanz.jpeg" alt="logo de glanz"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
-                    aria-labelledby="offcanvasNavbarLabel">
+                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
                     <div class="offcanvas-header">
                         <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Grupo Glanz</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -68,7 +64,7 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active ">
                         <div class="tarjeta">
-                            <img src="../img/fiat-cronos-driveplus1.3mt-blanco.png" alt="cronos-drive">
+                            <img src="../img/fiat-cronos-driveplus1.3mt-blanco.png" alt="cronos drive">
                             <h3>Drive Pluse 1.3 mt</h3>
                             <p>Llantas aleación esmaltadas | Acabados cobrizos | Central multimedia 7"</p>
                             <a class="vermas" href="">VER MÁS</a>
@@ -76,7 +72,7 @@
                     </div>
                     <div class="carousel-item ">
                         <div class="tarjeta">
-                            <img src="../img/fiat-cronos-stile1.3mt-silverstonemetalizado.png" alt="cronos-stile">
+                            <img src="../img/fiat-cronos-stile1.3mt-silverstonemetalizado.png" alt="cronos stile">
                             <h3>Stile 1.3 mt</h3>
                             <p>Tapizado interior de cuero | Apoyabrazos delantero | Llantas 15"</p>
                             <a class="vermas" href="">VER MÁS</a>
@@ -84,20 +80,18 @@
                     </div>
                     <div class="carousel-item ">
                         <div class="tarjeta">
-                            <img src="../img/fiat-cronos-precision1.3cvt-montecarlo.png" alt="cronos-precision">
+                            <img src="../img/fiat-cronos-precision1.3cvt-montecarlo.png" alt="cronos precision">
                             <h3>Precision 1.3 cvt</h3>
                             <p>Tapizado interior de cuero | Llantas 16" | Caja autoátiva CVT</p>
                             <a class="vermas" href="">VER MÁS</a>
                         </div>
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
-                    data-bs-slide="prev">
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
-                    data-bs-slide="next">
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
@@ -111,7 +105,7 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active ">
                         <div class="tarjeta">
-                            <img src="../img/fiat-pulse-drive-platabari.webp" alt="pulse-manual">
+                            <img src="../img/fiat-pulse-drive-platabari.webp" alt="pulse manual">
                             <h3>Drive Manual</h3>
                             <p>Fatos y ópticas LED | Llantas de aleacón de 16" | Central multimedia de 10,1"</p>
                             <a class="vermas" href="">VER MÁS</a>
@@ -119,7 +113,7 @@
                     </div>
                     <div class="carousel-item ">
                         <div class="tarjeta">
-                            <img src="../img/fiat-pulse-drive-alaska.webp" alt="pulse-automatico">
+                            <img src="../img/fiat-pulse-drive-alaska.webp" alt="pulse automatico">
                             <h3>Drive Automático</h3>
                             <p>Aire acondicionado automático y digital | Caja automática CVT | Central multimedia de 10,1"</p>
                             <a class="vermas" href="">VER MÁS</a>
@@ -127,7 +121,7 @@
                     </div>
                     <div class="carousel-item ">
                         <div class="tarjeta">
-                            <img src="../img/fiat-pulse-audace-montecarlo.webp" alt="pulse-audace">
+                            <img src="../img/fiat-pulse-audace-montecarlo.webp" alt="pulse audace">
                             <h3>Audace</h3>
                             <p>Llantas de aleación de 16" esmaltadas | Motor 1.0 turbo | Caja automática CVT</p>
                             <a class="vermas" href="">VER MÁS</a>
@@ -135,20 +129,18 @@
                     </div>
                     <div class="carousel-item ">
                         <div class="tarjeta">
-                            <img src="../img/fiat-pulse-impetus-azulbicolor.webp" alt="pulse-impetus">
+                            <img src="../img/fiat-pulse-impetus-azulbicolor.webp" alt="pulse impetus">
                             <h3>Impetus</h3>
                             <p>Llantas de aleación de 17" carrocería bitono | Tablero full digital de 7" | Asientos tapizados en cuero</p>
                             <a class="vermas" href="">VER MÁS</a>
                         </div>
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample1"
-                    data-bs-slide="prev">
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample1" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample1"
-                    data-bs-slide="next">
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample1" data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
@@ -178,7 +170,7 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active ">
                         <div class="tarjeta">
-                            <img src="../img/fiat-strada-endurance-cabinadoble.webp" alt="strada-cabina-doble">
+                            <img src="../img/fiat-strada-endurance-cabinadoble.webp" alt="strada cabina doble">
                             <h3>Endurance Cabina Doble</h3>
                             <p>Control de estabilidad con asistencia al arranque en pendiente | Control de traccion avanzado con E-Locker (TC+) | Radio AM/FM con Wireless Connectivity y comandos de audio al volante</p>
                             <a class="vermas" href="">VER MÁS</a>
@@ -186,7 +178,7 @@
                     </div>
                     <div class="carousel-item ">
                         <div class="tarjeta">
-                            <img src="../img/fiat-strada-freedom-blanca.webp" alt="strada-freedom">
+                            <img src="../img/fiat-strada-freedom-blanca.webp" alt="strada freedom">
                             <h3>Freedom</h3>
                             <p>Alzacristales eléctricos en las 4 puertas | Alarma y cierre centralizado | Display de tablero multifunción de 3,5"</p>
                             <a class="vermas" href="">VER MÁS</a>
@@ -194,7 +186,7 @@
                     </div>
                     <div class="carousel-item ">
                         <div class="tarjeta">
-                            <img src="../img/fiat-strada-volcano-roja.webp" alt="strada-volcano">
+                            <img src="../img/fiat-strada-volcano-roja.webp" alt="strada volcano">
                             <h3>Volcano</h3>
                             <p>Central multimedia Uconnect de 7" que espeja tu teléfono | Faros LED | Cámara y sensores traseros de estacionamiento</p>
                             <a class="vermas" href="">VER MÁS</a>
@@ -202,20 +194,18 @@
                     </div>
                     <div class="carousel-item ">
                         <div class="tarjeta">
-                            <img src="../img/fiat-strada-volcano-roja.webp" alt="strada-volcano-13cvt">
+                            <img src="../img/fiat-strada-volcano-roja.webp" alt="strada volcano 13cvt">
                             <h3>Volcano 1.3 cvt</h3>
                             <p>Central multimedia Uconnect de 7" que espeja tu teléfono | Faros LED | Cámara y sensores traseros de estacionamiento</p>
                             <a class="vermas" href="">VER MÁS</a>
                         </div>
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample2"
-                    data-bs-slide="prev">
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample2" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample2"
-                    data-bs-slide="next">
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample2" data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
@@ -229,7 +219,7 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active ">
                         <div class="tarjeta">
-                            <img src="../img/fiat-toro-grisgranito.webp" alt="toro-volcano">
+                            <img src="../img/fiat-toro-grisgranito.webp" alt="toro volcano">
                             <h3>Volcano</h3>
                             <p>ADAS | Apertura y encendido remoto | Llantas de aleación 18"</p>
                             <a class="vermas" href="">VER MÁS</a>
@@ -237,42 +227,47 @@
                     </div>
                     <div class="carousel-item ">
                         <div class="tarjeta">
-                            <img src="../img/fiat-toro-blanco.webp" alt="toro-freedom">
+                            <img src="../img/fiat-toro-blanco.webp" alt="toro freedom">
                             <h3>Freedom</h3>
                             <p>Cargador inalámbrico | Central multimedia 8,4" | Faros full LED"</p>
                             <a class="vermas" href="">VER MÁS</a>
                         </div>
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample3"
-                    data-bs-slide="prev">
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample3" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample3"
-                    data-bs-slide="next">
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample3" data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
         </section>
         <div class="wspp">
-            <a href="https://wa.link/bwnh38" target="_blank"><img src="../img/whatsappgreen.png" alt="whatsapp"></a>
+            <a href="https://wa.link/bwnh38" target="_blank"><img src="../img/whatsappgreen.png" alt="vínculo al chat de whatsapp"></a>
         </div>
     </main>
     <footer>
-        <div>
-            <a href="https://www.instagram.com" target="_blank"><img src="../img/icono-instagram.png"
-                    alt="instagram"></a>
-            <a href="https://www.linkedin.com/feed/" target="_blank"><img src="../img/icono-linkedin.png"
-                    alt="linkedin"></a>
-            <a href="https://www.facebook.com" target="_blank"><img src="../img/icono-facebook.png" alt="facebook"></a>
+        <div class="redes">
+            <a href="https://www.instagram.com/grupo.glanz/?utm_source=ig_web_button_share_sheet&igshid=OGQ5ZDc2ODk2ZA==" target="_blank"><img src="../img/icono-instagram.png" alt="vínculo a página de instagram"></a>
+            <a href="https://www.linkedin.com/feed/" target="_blank"><img src="../img/icono-linkedin.png" alt="vínculo a página de linkedin"></a>
+            <a href="https://www.facebook.com" target="_blank"><img src="../img/icono-facebook.png" alt="vínculo a página de facebook"></a>
+        </div>
+        <div class="vinculos">
+            <div>
+                <a href="./compra-tu-auto.html">Vehículos</a>
+                <a href="">Postventa</a>
+            </div>
+            <div>
+                <a href="https://maps.app.goo.gl/r8uFdTzfghSBodTBA" target="_blank">Concesionario</a>
+                <a href="https://wa.link/bwnh38" target="_blank">Contacto</a>
+            </div>
+            <div>
+                <a href="https://forms.gle/iPuwWWtCbQkRLYyv7" target="_blank">Trabajá con nosotros</a>
+            </div>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
-
 </html>
