--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css"> 
     <link rel="stylesheet" href="../css/estilos.css">
     <title>Glanz | Nosotros </title>
     <link rel="shortcut icon" href="../img/logo-g-blanco.jpeg" type="image/x-icon">
@@ -12,21 +11,19 @@
     <meta name="description" content="Concesionaria de autos. Comprá tu auto 0Km fácil y rápido. Tienda oficial de Fiat. Elegí tu auto y compra ahora. Comunicate con nosotros y te asesoramos.">
     <meta property="og:type" content="Informativa">
     <meta property="og:title" content="Glanz | Nosotros">
-    <meta property="og:url" content="">
-    <meta property="og:image" content="">
+    <meta property="og:url" content="https://grupoglanz.netlify.app">
+    <meta property="og:image" content="https://grupoglanz.netlify.app/img/logo-grupo-glanz.jpeg">
     <meta property="og:description" content="Concesionaria de autos. Comprá tu auto 0Km fácil y rápido.">
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg fixed-top">
             <div class="container-fluid navCel">
-                <a class="navbar-brand" href="../index.html"><img src="../img/logo-grupo-glanz.jpeg" alt="logo"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
-                    data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+                <a class="navbar-brand" href="../index.html"><img src="../img/logo-grupo-glanz.jpeg" alt="logo de glanz"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
-                    aria-labelledby="offcanvasNavbarLabel">
+                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
                     <div class="offcanvas-header">
                         <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Grupo Glanz</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -60,7 +57,7 @@
             <p>Nosotros</p>
         </section>
         <section  class="somos">
-            <img src="../img/nosotros.jpg" alt="personas-cerrando-un-trato">
+            <img src="../img/nosotros.jpg" alt="personas cerrando un trato">
             <div>
                 <h2>NUESTRA HISTORIA</h2>
                 <p>Somos una empresa con una sólida trayectoria de 6 años en el mundo del rubro automotriz. Desde nuestros inicios, nos hemos dedicado con pasión y compromiso a ofrecer a nuestros clientes productos y servicios de calidad.</p>
@@ -70,14 +67,27 @@
             </div>
         </section>
         <div class="wspp">
-            <a href="https://wa.link/bwnh38" target="_blank"><img src="../img/whatsappgreen.png" alt="whatsapp"></a>
+            <a href="https://wa.link/bwnh38" target="_blank"><img src="../img/whatsappgreen.png" alt="vínculo al chat de whatsapp"></a>
         </div>
     </main>
     <footer>
-        <div>
-            <a href="https://www.instagram.com" target="_blank"><img src="../img/icono-instagram.png" alt="instagram"></a>
-            <a href="https://www.linkedin.com/feed/" target="_blank"><img src="../img/icono-linkedin.png" alt="linkedin"></a>
-            <a href="https://www.facebook.com" target="_blank"><img src="../img/icono-facebook.png" alt="facebook"></a>
+        <div class="redes">
+            <a href="https://www.instagram.com/grupo.glanz/?utm_source=ig_web_button_share_sheet&igshid=OGQ5ZDc2ODk2ZA==" target="_blank"><img src="../img/icono-instagram.png" alt="vínculo a página de instagram"></a>
+            <a href="https://www.linkedin.com/feed/" target="_blank"><img src="../img/icono-linkedin.png" alt="vínculo a página de linkedin"></a>
+            <a href="https://www.facebook.com" target="_blank"><img src="../img/icono-facebook.png" alt="vínculo a página de facebook"></a>
+        </div>
+        <div class="vinculos">
+            <div>
+                <a href="./compra-tu-auto.html">Vehículos</a>
+                <a href="">Postventa</a>
+            </div>
+            <div>
+                <a href="https://maps.app.goo.gl/r8uFdTzfghSBodTBA" target="_blank">Concesionario</a>
+                <a href="https://wa.link/bwnh38" target="_blank">Contacto</a>
+            </div>
+            <div>
+                <a href="https://forms.gle/iPuwWWtCbQkRLYyv7" target="_blank">Trabajá con nosotros</a>
+            </div>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
